--- a/.github/workflows/daily-joke.yml
+++ b/.github/workflows/daily-joke.yml
@@ -26,9 +26,13 @@ jobs:
           sed -i 's|> 🃏 \*“.*”\*|> 🃏 *“'"$joke"'”*|' README.md
 
       - name: 💾 Commit and Push
+        env:
+          TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config --global user.name "bridge-homies-bot"
           git config --global user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
           git add README.md
-          git commit -m "🤖 Updated daily joke"
+          git commit -m "🤖 Updated daily joke" || echo "No changes to commit"
           git push
+
