--- a/.github/workflows/daily-joke.yml
+++ b/.github/workflows/daily-joke.yml
@@ -27,12 +27,12 @@ jobs:
 
       - name: 💾 Commit and Push
         env:
-          TOKEN: ${{ secrets.GH_TOKEN }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name "bridge-homies-bot"
-          git config --global user.email "actions@github.com"
-          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
+          git config user.name "bridge-homies-bot"
+          git config user.email "actions@github.com"
           git add README.md
           git commit -m "🤖 Updated daily joke" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git HEAD:main
+
 
