--- a/.github/workflows/daily-joke.yml
+++ b/.github/workflows/daily-joke.yml
@@ -27,12 +27,14 @@ jobs:
 
       - name: 💾 Commit and Push
         env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config user.name "bridge-homies-bot"
           git config user.email "actions@github.com"
+          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
           git add README.md
           git commit -m "🤖 Updated daily joke" || echo "No changes to commit"
-          git push https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git HEAD:main
+          git push origin HEAD:main
+
 
 
